[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Menu.gd" type="Script" id=1]

[node name="Menu" type="ColorRect"]
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 1.0
margin_right = -6.10352e-05
color = Color( 0, 0, 0, 0.384314 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 30.0
margin_right = -15.0
margin_bottom = -30.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Container"]
margin_right = 482.0
margin_bottom = 14.0
text = "Dont Trust Anyone"
align = 1

[node name="BottomContainer" type="VBoxContainer" parent="Container"]
margin_left = 142.0
margin_top = 44.0
margin_right = 340.0
margin_bottom = 540.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 2

[node name="HostBTN" type="Button" parent="Container/BottomContainer"]
margin_top = 412.0
margin_right = 198.0
margin_bottom = 432.0
text = "Create Host"

[node name="ServerBTN" type="Button" parent="Container/BottomContainer"]
margin_top = 442.0
margin_right = 198.0
margin_bottom = 462.0
text = "Server Only"

[node name="HBoxContainer" type="HBoxContainer" parent="Container/BottomContainer"]
margin_top = 472.0
margin_right = 198.0
margin_bottom = 496.0

[node name="ConnectBTN" type="Button" parent="Container/BottomContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 24.0
text = "Connect"

[node name="ServerPath" type="LineEdit" parent="Container/BottomContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 198.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
placeholder_text = "server:port"
placeholder_alpha = 0.541

[connection signal="pressed" from="Container/BottomContainer/HostBTN" to="." method="_on_HostBTN_pressed"]
[connection signal="pressed" from="Container/BottomContainer/ServerBTN" to="." method="_on_ServerBTN_pressed"]
[connection signal="pressed" from="Container/BottomContainer/HBoxContainer/ConnectBTN" to="." method="_on_ConnectBTN_pressed"]
[connection signal="text_changed" from="Container/BottomContainer/HBoxContainer/ServerPath" to="." method="_on_ServerPath_text_changed"]
